--- a/static-files-folder/style_page2.css
+++ b/static-files-folder/style_page2.css
@@ -29,7 +29,7 @@ h2 {
   font-weight: bold;
   text-align: center;
   font-size: 5vh;
-  margin-top: 50vh;
+   margin-top: 30%;
 }
 
 
